fixed width styles on mobile

--- a/src/components/Header/DarkModeSwitch.module.css
+++ b/src/components/Header/DarkModeSwitch.module.css
@@ -3,7 +3,7 @@
   align-items: center;
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 1023px) {
   .switcher-container {
     display: flex;
     align-items: center;
