--- a/src/components/Header/Navigation.module.css
+++ b/src/components/Header/Navigation.module.css
@@ -33,6 +33,7 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
+  
 }
 
 .navbar-links .ligth-link a:hover {
@@ -56,12 +57,13 @@
 .navbar-links .dark-link a.active {
   color: #ffffff;
 }
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 1023px) {
   .logo {
     font-size: 15px;
     line-height: 22.5px;
   }
   .navbar-links {
     gap: 20px;
+    margin-right: 40px;
   }
 }
