--- a/src/components/Kanban/DragAndDrop.module.css
+++ b/src/components/Kanban/DragAndDrop.module.css
@@ -33,11 +33,12 @@
 .section-counter-dark {
   background: #30333a;
 }
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 1023px) {
   .single-column {
     min-height: 140px;
   }
   .section-title {
+    text-align: center;
     margin: 0;
     margin-top: 20px;
     margin-bottom: 11px;
