--- a/src/components/Kanban/DroppableDraggableComponents/DraggableSection.module.css
+++ b/src/components/Kanban/DroppableDraggableComponents/DraggableSection.module.css
@@ -122,6 +122,9 @@
   color: #15161a;
   cursor: pointer;
 }
-@media all and (max-width: 375px) {
-  
+@media only screen and (max-width: 1023px) {
+  .card-draggable {
+    max-width: 100%;
+    margin: 5px auto;
+  }
 }
