--- a/src/components/Kanban/DroppableDraggableComponents/DroppableSection.module.css
+++ b/src/components/Kanban/DroppableDraggableComponents/DroppableSection.module.css
@@ -25,8 +25,10 @@
   background-color: #2c2f38;
   border: 1px solid #30333a;
 }
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 1023px) {
   .card-droppable {
+    width: 100%;
     min-height: 200px;
+    max-width: 1000px;
   }
 }
