--- a/src/components/UI/Container.module.css
+++ b/src/components/UI/Container.module.css
@@ -7,7 +7,7 @@
 .container-dark {
   border-bottom: 1px solid #30333a;
 }
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 1023px) {
   .container {
     padding: 20px 25px;
   }
